namespace HeatManager.Core.DataLoader;

public class CsvDataLoader : IDataLoader
{
    public void LoadData(string csvFilePath)
    {


        
    }

}