namespace HeatManager.Core.DataLoader;

public class DatabaseDataLoader : IDataLoader
{
    
}