namespace HeatManager.Core.DataLoader;

public interface IDataLoader
{
    
}