namespace HeatManager.Core.Services.Optimizers;

public interface IOptimizer
{
    public Task OptimizeAsync();
}