namespace HeatManager.Core.ViewModels;

internal interface IAssetManagerViewModel
{
    // Implement management of heat/electricity sources and resources
}