namespace HeatManager.Core.ViewModels;

internal interface IDataOptimizerViewModel
{
    // Add options to select which units to optimize
    // Add optimize button
    // Visualize results
}